fixes to toolchain build system

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,7 +1,8 @@
+CC=~/opt/cross/bin/i686-elf-gcc
 SOURCES=x86/init.o x86/gdt.o
 
-CFLAGS=-Iinclude/ -m32 -nostdlib -nostdinc -fno-builtin -fno-stack-protector -ffreestanding -g
-LDFLAGS= -melf_i386  -Tx86/linker.ld
+CFLAGS=-Iinclude/ -nostdlib -lgcc -ffreestanding -g
+LDFLAGS=-Tx86/linker.ld
 ASFLAGS=-felf
 
 all: $(SOURCES) link
@@ -10,7 +11,7 @@ clean:
 	-rm *.o kernel
 
 link:
-	ld $(LDFLAGS) -o kernel $(SOURCES)
+	$(CC) $(CFLAGS) $(LDFLAGS) -o kernel $(SOURCES)
 
 .s.o:
 	$(CC) $(CFLAGS) -c $< -o $@
